syntax = "proto3";
package vela.api.model;

import "google/protobuf/struct.proto";


option go_package = "github.com/oam-dev/velacp/pkg/proto/model";

message Application {

  string name = 1;

  string namespace = 2;

  string desc = 3;

  // Unix time of the last time when the cluster is updated.
  int64 updated_at = 4;

  repeated ComponentType components = 5;

  string clusterName = 6;

  repeated AppEventType events = 7;
}

message AppYaml {
  string yaml = 1;
}

message ComponentType {
  string name = 1;
  string type = 2;
  string namespace = 3;
  string workload = 4;
  string desc = 5;
  string phase = 6;
  bool health = 7;
  google.protobuf.Struct properties = 8;
  repeated TraitType traits = 9;
}

message TraitType {
  string type = 1;
  string desc = 2;
  google.protobuf.Struct properties = 3;
}

message AppEventType {
  string type = 1;
  string reason = 2;
  string age = 3;
  string message = 4;
}

message ApplicationListResponse {
  repeated Application applications = 1;
}

message ApplicationResponse {
  Application application = 1;
}